--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,7 +5,7 @@
 
   <form>
     <ion-item>
-      <ion-input [(ngModel)]="creds.email" name="email" type="text" placeholder="Email"></ion-input>
+      <ion-input [(ngModel)]="creds.userName" name="email" type="text" placeholder="Email"></ion-input>
     </ion-item>
     <ion-item>
      
