--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -70,8 +70,8 @@
       </ion-item>
     </ion-card>
 
-    <button ion-button block (click)="checkout()">Confirmar pedido</button>
-    <button ion-button block outline (click)="back()">Voltar</button>
+    <button round ion-button block (click)="checkout()">Confirmar pedido</button>
+    <button round ion-button block outline (click)="back()">Voltar</button>
   </div>
 
   <div *ngIf="codpedido">
@@ -85,7 +85,7 @@
         </ion-item>
     </ion-card>
 
-    <button ion-button block outline (click)="home()">Voltar</button>
+    <button round ion-button block outline (click)="home()">Voltar</button>
   </div>
 
 </ion-content>
