--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -16,7 +16,10 @@
 
         <ion-list>
           <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
-            <ion-icon name="cart" item-start></ion-icon>
+            <ion-icon name="cart" item-start>
+              <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+            </ion-icon>
+            
             {{ item.nome }}
           </button>
       
